@@ -20,7 +20,7 @@
 \
 \ ==============================================================================
 \ 
-\  $Date: 2006-12-04 19:55:43 $ $Revision: 1.23 $
+\  $Date: 2006-12-08 20:59:48 $ $Revision: 1.24 $
 \
 \ ==============================================================================
 
@@ -51,7 +51,9 @@ include ffl/sci.fs
 include ffl/sh1.fs
 include ffl/str.fs
 include ffl/tis.fs
+include ffl/tmr.fs
 include ffl/tos.fs
+include ffl/trm.fs
 
 \ ==============================================================================
 
