@@ -1,4 +1,5 @@
 0.4.0:
+* tmr: new module (Timer) (2006-12-8)
 * crc: word scr-free renamed to crc-free (bug)
 * crc: word crc-start renamed to crc-reset
 * sh1: new module (Secure Hash 1) (2006-12-04)
